adicionando patch para cedentes
